# arxivlens

./: Cargo.toml  Makefile  README.md
.githooks/: pre-commit
.github/workflows/: rust.yml
src/: app.rs  arxiv.rs  arxiv_entry.rs  arxiv_query.rs  config.rs  event.rs  handler.rs  lib.rs  main.rs  search_highlight.rs  tui.rs  ui.rs
src/app/: actions.rs  mod.rs  search.rs
src/arxiv/: parsing.rs  query.rs
src/search/: engine.rs
src/ui/: component.rs  config_popup.rs  detail.rs  footer.rs  help.rs  highlight.rs  list.rs  mod.rs  search.rs  style.rs  testing.rs  theme.rs  utils.rs
src/ui/components/: article_feed.rs  article_list.rs  config_popup.rs  footer.rs  help_popup.rs  mod.rs  preview.rs  search_bar.rs  vip_feed.rs
tests/: search_test.rs  ui_golden_tests.rs  ui_integration_test.rs
tests/fixtures/: authors_sample.xml  sample_arxiv.xml  synthetic_articles.json
tests/golden/: ArticleFeed.golden  PreviewComponent.golden  PreviewComponent_120x30.golden  PreviewComponent_20x6.golden  PreviewComponent_40x12.golden  PreviewComponent_80x24.golden  article_list.golden  config_popup.golden  footer_120x30.golden  footer_20x6.golden  footer_40x12.golden  footer_80x24.golden  search_bar.golden
