[package]
name = "arxivlens"
version = "0.1.0"
authors = ["Alexis Morvan <morvan.alexis@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
arboard = "3.4.0"
minidom = "0.15.2"
ratatui = "0.27.0"
reqwest = { version = "0.12.5", features = ["blocking"] }
clap = {version = "4.0", features = ["derive"]}
aho-corasick = "1.1.3"
itertools = "0.13.0"
