[package]
name = "arxivlens"
description = "Terminal User Interface (TUI) for exploring arXiv"
version = "0.1.2"
authors = ["Alexis Morvan <morvan.alexis@gmail.com>"]
license = "MIT"
edition = "2021"
readme = "README.md"
repository = "https://github.com/AlMrvn/arxivlens"
homepage = "https://github.com/AlMrvn/arxivlens"
keywords = ["git", "cli", "tui", "terminal", "arxiv"]
categories = ["command-line-utilities"]

exclude = ["/.github" ]

[dependencies]
arboard = "3.4.0"
minidom = "0.15.2"
ratatui = { version = "0.27.0", features = ["serde"] }
crossterm = "0.27.0"
reqwest = { version = "0.12.5", features = ["blocking"] }
clap = {version = "4.0", features = ["derive"]}
aho-corasick = "1.1.3"
serde = { version = "1.0.204", features = ["derive"] }
xdg = "2.5.2"
toml = "0.8.16"
itertools = "0.13.0"
thiserror = "1.0.57"
nucleo = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[dev-dependencies]
tempfile = "3.10.1"
serde_json = "1.0"
